@@ -3,6 +3,9 @@ Revision history for Perl extension App::Sqitch
 0.12
      - Added `--local` option to `sqitch config`.
      - Renamed `project_file()` to `--local_file()` in App::Sqitch::Config.
+     - `sqitch init` now writes engine config settings with default values to
+       the configuration file. This makes it easier for folks to get started
+       editing it.
 
 0.11  2012-04-27T06:44:54Z
      - Implemented `init` command.
